--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "react-query-devtools": "^2.6.3",
-    "react-spinners": "^0.13.7"
+    "react-spinners": "^0.13.7",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
